<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="reminders">Reminders</string>
    <string name="what_would_you_like_to_watch_today">What would you like to watch today?</string>
    <string name="movie_of_the_day">Movie of the day</string>
    <string name="latest">Latest</string>
    <string name="unexpected_error_occurred">Unexpected error occurred :(</string>
    <string name="eighteen_plus">18+</string>
    <string name="top_rated">Top rated</string>
    <string name="popular">Popular</string>
    <string name="view_all">View all</string>
    <string name="upcoming">Upcoming</string>
    <string name="search">Search</string>
    <string name="load_more">Load more</string>
    <string name="background_image">Background image</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="date">Release date:</string>
    <string name="original_title">Original title:</string>
    <string name="original_language">Original language:</string>
    <string name="duration">Duration:</string>
    <string name="min">min</string>
    <string name="budget">Budget:</string>
    <string name="similar_movies">Similar movies</string>
    <string name="close">Close</string>
    <string name="status">Status:</string>
    <string name="movie_added_to_favorite">The movie was added to favorite</string>
    <string name="movie_removed_to_favorite">The movie was removed from favorite</string>
    <string name="this_list_is_empty_yet">This list is empty yet</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_to_watch_description">We\'re reminding you to watch the movie</string>
</resources>