<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieLoaderAnimation"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_movie_loader" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/what_would_you_like_to_watch_today"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchFieldHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:outlineSpotShadowColor="@android:color/white"
                    android:translationZ="6dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/search_et_holder"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_search"
                        app:boxCornerRadiusBottomEnd="18dp"
                        app:boxCornerRadiusBottomStart="18dp"
                        android:focusable="false"
                        app:boxCornerRadiusTopEnd="18dp"
                        app:boxCornerRadiusTopStart="18dp"
                        app:boxStrokeColor="@android:color/transparent"
                        app:boxStrokeWidth="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/search_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:enabled="false"
                            android:drawableStart="@drawable/ic_search"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/nunito_regular"
                            android:imeOptions="actionSearch"
                            android:inputType="text"
                            android:maxLines="1"
                            android:paddingTop="10dp"
                            android:paddingBottom="16dp"
                            android:textColor="@android:color/white"
                            android:textCursorDrawable="@null"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/searchFieldHolder"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

            <TextView
                android:id="@+id/txtPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/popular"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchFieldHolder" />

            <TextView
                android:id="@+id/txtViewAllPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/view_all"
                android:textColor="#EF5D64"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtPopular"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:clipToPadding="false"
                android:paddingStart="6dp"
                app:layout_constraintTop_toBottomOf="@+id/txtPopular"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/top_rated"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popularRecyclerView" />

            <TextView
                android:id="@+id/txtViewAllTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/view_all"
                android:textColor="#EF5D64"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtTopRated"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:clipToPadding="false"
                android:paddingStart="6dp"
                app:layout_constraintTop_toBottomOf="@+id/txtTopRated"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/upcoming"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topRatedRecyclerView" />

            <TextView
                android:id="@+id/txtViewAllUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/view_all"
                android:textColor="#EF5D64"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtUpcoming"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcomingRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:clipToPadding="false"
                android:paddingStart="6dp"
                app:layout_constraintTop_toBottomOf="@+id/txtUpcoming"
                tools:ignore="RtlSymmetry" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>